fix: update color palette to enhance text visibility

--- a/assets/style.css
+++ b/assets/style.css
@@ -23,7 +23,7 @@ html{
 .header{
     display: flex;
     flex: 1;
-    background-color: #8F87F1;
+    background-color: #0d0b33;
     color: aliceblue;
     font-size: xx-large;
     font-weight: bold;
@@ -33,12 +33,13 @@ html{
 .sub-header{
     display: flex;
     flex: 1;
-    background-color: #C68EFD;
+    background-color: #4c2f6f;
     padding: 0.5em;
     font-weight: light;
     font-size: large ;
     font-style: italic;
     justify-content: center;
+    color: #fff;
 }
 #header-highlighting{
     background-color: #9c42f5;
@@ -60,22 +61,23 @@ html{
     display: flex;
     flex: 1;
     padding: 3em 2em;
-    background-color: #FED2E2;
+    background-color: #52489f;
     justify-content: center;
     font-style: italic;
     font-weight: 400;
     font-size: xx-large;
-    max-height: 5em;  
+    max-height: 5em;
+    color: #fff;  
 }
 .author{
     display: flex;
     padding: 1em;
-    background-color: #FED2E2;
+    background-color: #52489ff8;
     justify-content: center;
     font-style: italic;
     font-weight: 400;
     font-size: x-large; 
-    
+    color: #070707;
 }
 
 
@@ -83,7 +85,7 @@ html{
     display: flex;
     flex: 1;
     justify-content: center;
-    background-color: #8F87F1;
+    background-color: #0d0b33;
     color: #fff;
     padding-top: 2em;
     padding-bottom: 2em;
@@ -95,7 +97,7 @@ html{
     font-style: italic;
     font-size: 1.3em;
     padding: 0px 10px;
-    color: #FED2E2;
+    color: #007acc;
 }
 .footer-container a{
     text-decoration: none; 
@@ -110,7 +112,7 @@ html{
     justify-content: center;
 }
 .button{
-    background: #8F87F1;
+    background: #4c2f6f9a;
     border-radius: 12px;
     border: none;
     padding: 0;
@@ -122,7 +124,7 @@ html{
     padding: 12px 42px;
     border-radius: 12px;
     font-size: 1.25rem;
-    background: #6c60f3;
+    background: #4c2f6f;
     color: white;
     transform: translateY(-6px);
 }
